# sample-horizon-angular-plugin

./: AngularJSSlides.pptx  README.rst  local.conf  setup.cfg
devstack/: README.rst  plugin.sh  settings
sample_dashboard/api/rest/: sample_network.py
sample_dashboard/dashboards/project/sample/: __init__.py  panel.py  urls.py
sample_dashboard/enabled/: ._1485_project_ng_sample_panel.py.swp  _1485_project_ng_sample_panel.py
sample_dashboard/static/app/core/openstack-service-api/: sample-network.service.js
sample_dashboard/static/dashboard/project/sample/: sample.module.js
sample_dashboard/static/dashboard/project/sample/network/: networks.controller.js  table.html
sample_dashboard/static/dashboard/project/sample/network/actions/: row-actions.service.js
