[metadata]
name = angularjs-sample
summary = Horizon panels for AngularJS
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    angularjs-sample

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = angularjs-sample/locale
domain = angularjs-sample

[update_catalog]
domain = angularjs-sample
output_dir = angularjs-sample/locale
input_file = angularjs-sample/locale/angularjs-sample.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = angularjs-sample/locale/angularjs-sample.pot
